examples/typechecking/trait_impls.an

ability Bar a b =
    bar: fn a a -> b


implicit bar1: Bar I32 String =
    Bar fn _ _ -> "good"

implicit bar2: Bar I32 I32 =
    Bar fn _ _ -> 0

implicit bar4: Bar I32 F64 =
    Bar fn _ _ -> 23.2 // Multiple matching impls when used at I32

foo a b = bar a b

baz (x: String) y = bar x y
_ = bar 3 2

_ = bar "four" "five"

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// type Bar a b =
//     bar: fn a a [Ptr Unit] -> b
// 
// implicit (bar1: Bar I32 String) =
//     (Bar: fn (fn I32 I32 [Ptr Unit] -> String) -> Bar I32 String) (fn (_: I32) (_: I32) -> "good")
// 
// implicit (bar2: Bar I32 I32) =
//     (Bar: fn (fn I32 I32 [Ptr Unit] -> I32) -> Bar I32 I32) (fn (_: I32) (_: I32) -> 0)
// 
// implicit (bar4: Bar I32 F64) =
//     (Bar: fn (fn I32 I32 [Ptr Unit] -> F64) -> Bar I32 F64) (fn (_: I32) (_: I32) -> 23.2)
// 
// (foo: fn _ _ -> _) (a: _) (b: _) = (bar: fn _ _ {Bar _ _} [Ptr Unit] -> _) (a: _) (b: _) {(error)}
// 
// (baz: fn String String -> _) ((x: String)) (y: String) = (bar: fn String String {Bar String _} [Ptr Unit] -> _) (x: String) (y: String) {(error)}
// 
// (_: _) = (bar: fn I32 I32 {Bar I32 _} [Ptr Unit] -> _) 3 2 {(error)}
// 
// (_: _) = (bar: fn String String {Bar String _} [Ptr Unit] -> _) "four" "five" {(error)}

// expected stderr:
// examples/typechecking/trait_impls.an:15:11
//    | // error: Ambiguous implicit of type Bar _ _ required by parameter 3 of bar, type annotation required
// 15 | foo a b = bar a b
//    |           ^^^
// 
// examples/typechecking/trait_impls.an:17:21
//    | // error: No implicit found for type Bar String _ required by parameter 3 of bar
// 17 | baz (x: String) y = bar x y
//    |                     ^^^
// 18 | _ = bar 3 2
// 
// examples/typechecking/trait_impls.an:18:5
// 17 | baz (x: String) y = bar x y
//    | // error: Ambiguous implicit of type Bar _ _ required by parameter 3 of bar, type annotation required
// 18 | _ = bar 3 2
//    |     ^^^
// 
// examples/typechecking/trait_impls.an:20:1
// 20 | _ = bar "four" "five"	// warning: `_` was already defined
//    | ^
// 
// examples/typechecking/trait_impls.an:20:5
//    | // error: No implicit found for type Bar String _ required by parameter 3 of bar
// 20 | _ = bar "four" "five"
//    |     ^^^
// 
// Found 4 errors and 1 warning

